2025-08-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-vc-registered):  Suppress warning.

2025-08-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-file-name-all-completions): Filter out
	"" hits.  (Bug#79173)

2025-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-handle-set-file-times): Don't use UTC in
	all cases.

	* tramp-smb.el (tramp-smb-handle-set-file-times): New defun.
	(tramp-smb-file-name-handler-alist): Use it.

2025-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation-external): New defvar.
	(tramp-file-name-for-operation): Use `memq'.  Handle external
	operations.  Raise `remote-file-error' error in case of.
	(tramp-add-external-operation, tramp-remove-external-operation):
	New defuns.  (Bug#79094)

2025-07-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.1 released

	* tramp-smb.el (tramp-smb-handle-file-attributes):
	Use `directory-file-name'.

2025-07-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-local-environment): Do not override
	`process-environment'.  Set "TERM", "PROMPT_COMMAND", "PS1" and
	"INSIDE_EMACS".  (Bug#79103)

	* tramp-sh.el (tramp-maybe-open-connection): Do not set "TERM",
	"PROMPT_COMMAND" and "PS1".

	* trampver.el.in (tramp-inside-emacs): Remove duplicate entries.

2025-07-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-bundle-read-file-names): Fix docstring.
	(tramp-sh-gio-monitor-process-filter): Extend error strings.

2025-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-connection-local-default-system-variables):
	Add "" to `exec-suffixes'.  (Bug#78886)

2025-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-local-environment): New defmacro.
	(tramp-start-process): New defun.
	(tramp-call-process, tramp-call-process-region)
	(tramp-process-lines): Use `with-tramp-local-environment'.
